tests/baselines/reference/assignFromStringInterface.errors.txt
tests/cases/conformance/types/primitives/string/assignFromStringInterface.ts(3,1): error TS2322: Type 'String' is not assignable to type '文字'.
  '文字' is a primitive, but 'String' is a wrapper object. Prefer using '文字' when possible.


==== tests/cases/conformance/types/primitives/string/assignFromStringInterface.ts (1 errors) ====
    var x = '';
    var a: String;
    x = a;
    ~
!!! error TS2322: Type 'String' is not assignable to type '文字'.
!!! error TS2322:   '文字' is a primitive, but 'String' is a wrapper object. Prefer using '文字' when possible.
    a = x;